--- a/test/integration/01_include/page.html
+++ b/test/integration/01_include/page.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     This is A
-    <esi:include src="include.inc.html"></esi:include>
+    <esi:include src="include.inc.html"><b></b></esi:include>
 </body>
 </html>
