--- a/test/integration/02_extends/main.tpl.html
+++ b/test/integration/02_extends/main.tpl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script></script>
-    <esi:print name="custJs"></esi:print>
+    <esix:print name="custJs"></esix:print>
 </head>
 <body>
 <esi:content>
