--- a/test/integration/02_extends/page.html
+++ b/test/integration/02_extends/page.html
@@ -1,10 +1,10 @@
 <esi:extends src="2col_layout.tpl.html">
-    <esi:param name="title">Welcome here</esi:param>
-    <esi:param name="siteJs">
-        <esi:asset>
+    <esix:param name="title">Welcome here</esix:param>
+    <esix:param name="siteJs">
+        <esix:asset>
             <script language="JavaScript" src="somejs.js"></script>
-        </esi:asset>
-    </esi:param>
+        </esix:asset>
+    </esix:param>
     paremeters will be passes preparsed to the templates
 
     <p>
