Added Markdown support

--- a/test/integration/03_asset/sub/2col_layout.tpl.html
+++ b/test/integration/03_asset/sub/2col_layout.tpl.html
@@ -1,6 +1,6 @@
 <esi:extends src="../main.tpl.html">
     From 2col_layout:
-    <esi:asset>
+    <esi:asset absolute="yes">
         <style href="somePath.xy"/>
     </esi:asset>
     <esi:content></esi:content>
