Added Yaml support

--- a/test/integration/05_eyaml/page.html
+++ b/test/integration/05_eyaml/page.html
@@ -3,18 +3,10 @@
     <esi:asset>
         <style href="somePath.xy"/>
     </esi:asset>
+    un nu
+    <esi:yaml>
+        "html":
+            - "div @id=wurst": Ich töte Kinder!
 
-    <esi:markdown>
-        # Header 1
-
-        ## Header2
-
-        ### Header 3
-
-        ```php
-        <?php some ding
-
-        ```
-
-    </esi:markdown>
+    </esi:yaml>
 </esi:extends>
