Added Yaml support

--- a/test/integration/05_eyaml/page.html
+++ b/test/integration/05_eyaml/page.html
@@ -6,7 +6,7 @@
     un nu
     <esi:yaml>
         "html":
-            - "div @id=wurst": Ich töte Kinder!
+            - "div @id=wurst": Brotwurst!
 
     </esi:yaml>
 </esi:extends>
